@@ -316,16 +316,18 @@ lecturas de plus3dos headers no van bien: Real length file SCREEN  .    read fro
 -timer de sdl para windows?
 -Revisar queries wos. Parece que army moves y otros que funcionaban, ya no
 -En visor dsk que solo muestre primer extent de un archivo. ya esta??
--parseo de config, si error en una linea, seguir con la siguiente
--al refrescar zx desktop no debería hacer framedrop (pero sí al mover iconos).ok
+
+-parseo de config, si error en una linea, seguir con la siguiente. De momento no se puede pues al parsear archivo de config,
+se "pierde" la separación en lineas. quizá se podria hacer que interpretase hasta siguiente parametro que empiece con "--"
+
 -en plus3doshandler, cuando filesystem empieza en pista 2, todos los bloques van desplazados una pista en adelante
 (igual que utils.c y llamada a menu_dsk_getoff_block). y lo mismo para buscar inicio pista
 
 -extractor dsk no obtiene bien longitudes de disco cpc (porque intenta obtener cabecera plus3dos). ok ya?
-
+-extractor dsk que use misma manera que visor dsk?
 
 -zx desktop tamaño deberia multiplicarse por gui zoom? ok en principio
 -footer que tambien amplie tamaño segun menu_gui_zoom
-ok -Tecla file selector para carpetas recientes
+
 -Opción para listar máquinas en una línea separadas por espacios
 -visualfloppy se llena buffer si ventana no está abierta. Quizá no habria que meter datos en buffer si no está ventana abierta
